Bug 504252 - New search UI can be partially scrolled away
Summary: New search UI can be partially scrolled away
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-15 08:27 UTC by Marco Martin
Modified: 2025-06-19 19:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
half hidden search field (69.97 KB, image/png)
2025-05-15 08:27 UTC, Marco Martin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Martin 2025-05-15 08:27:35 UTC
Created attachment 181319 [details]
half hidden search field

SUMMARY


STEPS TO REPRODUCE
1. search for a file in dolphin
2. put mouse cursor over the search ui area
3. scroll with mouse wheel or touchpad

OBSERVED RESULT
the whole search area (search field and nearby buttons) scroll up being cutted away, just empty space is revealed

EXPECTED RESULT
since there is no extra content, this shouldn't be a scrollble area at all
Comment 1 Marco Martin 2025-05-15 08:28:31 UTC
additional note: scaling is at 1.25, wouldn't be surprised if it depends from fractional scaling
Comment 2 Felix Ernst 2025-05-17 14:28:37 UTC
Confirming. This is a scroll area so this can be collapsed below the minimum width horizontally.
Comment 3 Akseli Lahtinen 2025-06-12 11:19:13 UTC
Looks like it adds the height of the details view category buttons to the height of the search.
Comment 4 Akseli Lahtinen 2025-06-12 11:48:29 UTC
Investigating further, for some reason the `m_secondRowLayout->geometry()` height grows to 2x the size when opening the search and typing text.
Comment 5 Akseli Lahtinen 2025-06-12 12:16:07 UTC
When you start typing and look closely, the size of the search field area shrinks couple pixels, then expands again.
Comment 6 Bug Janitor Service 2025-06-12 12:53:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/990
Comment 7 Akseli Lahtinen 2025-06-19 19:48:23 UTC
Git commit b1d46a3cbd6dd70a6ec7e31d2d11056a5f5c6d91 by Akseli Lahtinen.
Committed on 19/06/2025 at 16:07.
Pushed by akselmo into branch 'master'.

AnimatedHeightWidget: Disable scrollbars

QScrollArea is used to avoid increasing view width, and not for actual
scroll reasons.

We should therefore disallow scrolling the view entirely, since this
causes bugs with being able to scroll random views.

M  +4    -0    src/animatedheightwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/b1d46a3cbd6dd70a6ec7e31d2d11056a5f5c6d91