AnimatedHeightWidget: Disable scrollbars

QScrollArea is used to avoid increasing view width, and not for actual
scroll reasons.

We should therefore disallow scrolling the view entirely, since this
causes bugs with being able to scroll random views.

BUG: 504252