src/animatedheightwidget.cpp
@@ -10,6 +10,7 @@
 #include <QGridLayout>
 #include <QPropertyAnimation>
 #include <QScrollArea>
+#include <QScrollBar>
 #include <QStyle>
 
 AnimatedHeightWidget::AnimatedHeightWidget(QWidget *parent)
@@ -30,6 +31,8 @@ AnimatedHeightWidget::AnimatedHeightWidget(QWidget *parent)
     m_contentsContainerParent->setHorizontalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
     m_contentsContainerParent->setVerticalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
     m_contentsContainerParent->setWidgetResizable(true);
+    m_contentsContainerParent->verticalScrollBar()->setEnabled(false);
+    m_contentsContainerParent->horizontalScrollBar()->setEnabled(false);
 
     setMinimumWidth(0);
 }
